Alpha 7.0.2 - 26th September 2021

- Fix for a crash related to late-growing Hemp
- Fix for a crash when sleeping in bed but the bed no longer exists
- Increased opacity of sleeping spot

Alpha 7.0.1 - 25th September 2021

- Fix for a crash when cancelling unneeded jobs

Alpha 7 - 25th September 2021

- Added channels and piping for liquid flow between tiles
- Added water pump furniture to extract liquid from river and pump into pipes
- Added well furniture for usage of pumped water
- Added power generating furniture - windmill and water wheel
- Added mechanical power grid system for transfer of power between producers and consumers (such as windmill and water pump)
- Plants now require water to grow, which can be provided by rain or nearby irrigation channels containing water
- Ore crusher now requires power to operate, or else it will take significantly longer
- Added hemp crop, which requires processing in a retting station and then it can be crafted into rope or linen
    - Note that weaving is currently done by farmers, before a dedicated weaving profession will probably be added later
- Beds now require linen to be constructed
- Added sleeping spot to bedrooms to make up for more difficult bed requirements
- Added fishing mechanic/jobs and re-implemented the fisher profession
- Fish can be caught, prepared, and used in cooking soup
- Fixed particle effects on furniture in use like Ore Crusher
- Made settlers eat rations before other edible items in inventory
- Made lightning very unlikely to strike plants other than trees
- Moved map seed to options menu with copy to clipboard button
- Updated single door assets and lighting information
- Updated dirt floor texture
- Can now press enter in the rename dialog to submit the rename text (you would not believe how awkward this is to do)
- Changing stockpile settings now removes any *pending* hauling jobs which would be invalid with the new settings