@@ -59,7 +59,7 @@
   "tilesets/gui.atlas" : 6927825658661364146,
   "tilesets/masks.atlas" : -7267469657370952532,
   "tilesets/terrain.atlas" : 8950025147213891512,
-  "translations/collated.csv" : -7858675449721614020,
+  "translations/collated.csv" : 8575842006339054204,
   "translations/languages.json" : 8557385612734997329,
   "ui/cursors/*.png" : -5585657859447382791,
   "ui/fonts/*.ttf" : -7287232856992254877,
