@@ -56,6 +56,7 @@ CONSTRUCTION.STATUS.WAITING_FOR_RESOURCES,Waiting for resources to arrive,,Warte
 COOKING.BREAD.DESCRIPTION,{{materialDescription}} bread,,{{materialDescription}} Brot,{{materialDescription}} pain,{{materialDescription}} pane,{{materialDescription}} pan,{{materialDescription}} pão,,,{{materialDescription}} хлеб,{{materialDescription}} ekmek,{{materialDescription}} brød,,{{MaterialDescription}} bröd,,,,{{materialDescription}}のパン,{{materialDescription}} 面包,{{재료 설명}} 빵
 COOKING.DUAL_INGREDIENT.DESCRIPTION,{{materialOne}} and {{materialTwo}},,{{materialOne}} und {{materialTwo}},{{materialOne}} et {{materialTwo}},{{materialOne}} e {{materialTwo}},{{materialOne}} y {{materialTwo}},{{materialOne}} e {{materialTwo}},{{materialOne}} e {{materialTwo}},,{{materialOne}} и {{materialTwo}},{{materialOne}} ve {{materialTwo}},{{materialOne}} og {{materialTwo}},,{{MaterialAlone}} och {{MaterialTwo}},,,,{{materialOne}} と {{materialTwo}},{{materialOne}} 和 {{materialTwo}},{{materialOne}} 과 {{materialTwo}}
 COOKING.SOUP.DESCRIPTION,{{materialDescription}} soup,,Suppe aus {{materialDescription}},Soupe: {{materialDescription}},Zuppa ({{materialDescription}}),Sopa {{materialDescription}},Sopa de {{materialDescription}},sopa de {{materialDescription}},,{{materialDescription}} суп,{{materialDescription}} çorbası,{{materialDescription}} suppe,,{{MaterialDescription}} soppa,,,,{{materialDescription}}のスープ,{{materialDescription}} 汤,{{재료 설명}} 수프
+COOKING.TRIPLE_INGREDIENT.DESCRIPTION,"{{materialOne}}, {{materialTwo}} and {{materialThree}}",,,,,,,,,,,,,,,,,,,
 
 CRAFTING_TYPE.BAKING,Baking,,Backen,,,,,,,,Yemek Yapma,,,,,,,,,
 CRAFTING_TYPE.BLACKSMITHING,Blacksmithing,,Schmieden,,,,,,,,Demirci,,,,,,,,,
@@ -891,6 +892,8 @@ RESOURCE.GRAIN.SACK.NOUN,Grain (sack),,,,,,,,,,,,,,,,,,,
 RESOURCE.GRAIN.SACK.PLURAL,Grain (sack),,,,,,,,,,,,,,,,,,,
 RESOURCE.HEMP.BUNDLE.NOUN,Hemp bundle,,,,,,,,,,,,,,,,,,,
 RESOURCE.HEMP.BUNDLE.PLURAL,Hemp bundles,,,,,,,,,,,,,,,,,,,
+RESOURCE.HEMP.FIBRE.BUNDLE.NOUN,Hemp fibre bundle,,,,,,,,,,,,,,,,,,,
+RESOURCE.HEMP.FIBRE.BUNDLE.PLURAL,Hemp fibre bundles,,,,,,,,,,,,,,,,,,,
 RESOURCE.LOGS.NOUN,Log,,Stamm,Bûche,Tronco,Tronco,Tronco,Tronco,,Бревно,Kütük,Log,,Stock,,,,[ログ],日志,로그
 RESOURCE.LOGS.PLURAL,Logs,,Stämme,Bûches,Tronchi,Troncos,Troncos,Troncos,,Бревна,Kütük,Logfiler,,Stockar,,,,ログ,日志,로그
 RESOURCE.LOGS.TOOLTIP,"Sections of a tree that are most commonly prepared into {{RESOURCE.PLANKS.PLURAL}}, but have other uses as well.",,"Teil eines Baumes, der am häufigsten zu {{RESOURCE.PLANKS.PLURAL}} verarbeitet wird, aber auch andere Verwendungen hat.","Les parties d'un arbre qui sont le plus souvent préparées dans {{RESOURCE.PLANKS.PLURAL}}, mais qui ont également d'autres utilisations.","Sezioni di un albero che sono più comunemente preparate in {{RESOURCE.PLANKS.PLURAL}}, ma hanno anche altri usi.","Secciones de un árbol que se preparan con mayor frecuencia en {{RESOURCE.PLANKS.PLURAL}}, pero que también tienen otros usos.","Seções de uma árvore que são mais comumente preparadas em {{RESOURCE.PLANKS.PLURAL}}, mas também têm outros usos.",,,"Секции дерева, которые чаще всего готовятся в {{RESOURCE.PLANKS.PLURAL}}, но имеют и другие виды применения.",Genellikle {{RESOURCE.PLANKS.PLURAL}} yapımında kullanılan ancak başka kullanımlarıda olan bir ağaç parçası.,"Afsnit af et træ, der oftest fremstilles i {{RESOURCE.PLANKS.PLURAL}}, men som også har andre anvendelsesformål.",,"Delar av ett träd som oftast är beredda i {{RESOURCE.PLURC.PLURAL}}, men som också har andra användningsområden.",,,,{{RESOURCE.PLANKS.PLURAL}} に最もよく準備されているが、他の用途もある、ツリーのセクション。,最常用于 {{{资源. 浮游. 复数}}} 中，但也有其他用途的树的部分。,{{RESOURCE.PLANKS.PLURAL}} 로 가장 일반적으로 준비되지만 다른 용도가있는 트리의 섹션입니다.
