@@ -10,7 +10,7 @@ import technology.rocketjump.undermount.materials.model.GameMaterial;
 public class RequestLiquidTransferMessage {
 
 	public final GameMaterial targetLiquidMaterial;
-	public final boolean allowConstructedZones;
+	public final boolean useSmallCapacityZones;
 	public final Entity requesterEntity;
 	public final Vector2 requesterPosition;
 	public final ItemType liquidContainerItemType;
@@ -18,10 +18,10 @@ public class RequestLiquidTransferMessage {
 	public final Profession requiredProfession;
 	public final JobPriority jobPriority;
 
-	public RequestLiquidTransferMessage(GameMaterial targetLiquidMaterial, boolean allowConstructedZones, Entity requesterEntity, Vector2 requesterPosition,
+	public RequestLiquidTransferMessage(GameMaterial targetLiquidMaterial, boolean useSmallCapacityZones, Entity requesterEntity, Vector2 requesterPosition,
 										ItemType liquidContainerItemType, Profession requiredProfession, JobPriority jobPriority, JobCreatedCallback jobCreatedCallback) {
 		this.targetLiquidMaterial = targetLiquidMaterial;
-		this.allowConstructedZones = allowConstructedZones;
+		this.useSmallCapacityZones = useSmallCapacityZones;
 		this.requesterEntity = requesterEntity;
 		this.requesterPosition = requesterPosition;
 		this.liquidContainerItemType = liquidContainerItemType;
