@@ -13,11 +13,13 @@ public class ZoneClassification implements ChildPersistable {
 	private ZoneType zoneType;
 	private boolean isConstructed;
 	private GameMaterial targetMaterial;
+	private boolean isHighCapacity;
 
-	public ZoneClassification(ZoneType zoneType, boolean isConstructed, GameMaterial targetMaterial) {
+	public ZoneClassification(ZoneType zoneType, boolean isConstructed, GameMaterial targetMaterial, boolean isHighCapacity) {
 		this.zoneType = zoneType;
 		this.isConstructed = isConstructed;
 		this.targetMaterial = targetMaterial;
+		this.isHighCapacity = isHighCapacity;
 	}
 
 	public ZoneClassification() {
@@ -36,6 +38,10 @@ public class ZoneClassification implements ChildPersistable {
 		return targetMaterial;
 	}
 
+	public boolean isHighCapacity() {
+		return isHighCapacity;
+	}
+
 	@Override
 	public String toString() {
 		return zoneType + ", isConstructed=" + isConstructed + ", material=" + targetMaterial;
@@ -50,12 +56,16 @@ public class ZoneClassification implements ChildPersistable {
 		if (targetMaterial != null) {
 			asJson.put("targetMaterial", targetMaterial.getMaterialName());
 		}
+		if (isHighCapacity) {
+			asJson.put("highCapacity", true);
+		}
 	}
 
 	@Override
 	public void readFrom(JSONObject asJson, SavedGameStateHolder savedGameStateHolder, SavedGameDependentDictionaries relatedStores) throws InvalidSaveException {
 		this.zoneType = EnumParser.getEnumValue(asJson, "type", ZoneType.class, ZoneType.LIQUID_SOURCE);
 		this.isConstructed = asJson.getBooleanValue("isConstructed");
+		this.isHighCapacity = asJson.getBooleanValue("highCapacity");
 
 		String targetMaterialName = asJson.getString("targetMaterial");
 		if (targetMaterialName != null) {
