@@ -1,3 +1,10 @@
+Alpha 7.0.3 - 28th September 2021
+
+- Settlers will now collect water from wells to transfer to other containers (such as a water barrel)
+- Corrected labelling of soup with 3 ingredients
+- Added missing translation labels
+- Fix for a crash when trying to get into a bed which has been removed
+
 Alpha 7.0.2 - 26th September 2021
 
 - Fix for a crash related to late-growing Hemp
